--- a/css/imagevideo.css
+++ b/css/imagevideo.css
@@ -41,7 +41,7 @@
     transition: color 0.3s ease, transform 0.3s ease, text-shadow 0.3s ease;
 }
 
-/* Hover effect with gradient and scale */
+
 .navbar .nav-link:hover {
     color: #FFFFFF;
     transform: scale(1.1);
@@ -49,7 +49,7 @@
   
 }
 
-/* Underline effect with gradient animation */
+
 .navbar .nav-link::after {
     content: "";
     position: absolute;
@@ -58,13 +58,12 @@
     width: 100%;
     height: 3px;
     background: linear-gradient(90deg, #FFD700, #FF6347);
-    /* Gradient underline */
     transform: scaleX(0);
     transform-origin: bottom right;
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-/* Show the gradient underline effect on hover */
+
 .navbar .nav-link:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
@@ -121,7 +120,7 @@
 /*---------------------------------------- image section Styles-------------------------*/
 
 
-/* General Styles */
+
 .image-gallery-container {
     display: flex;
     flex-wrap: wrap;
@@ -171,7 +170,7 @@
     box-sizing: border-box; 
 }
 
-/* Custom Modal for gallery */
+
 .custom-modal {
     display: none;
     position: fixed;
@@ -212,7 +211,7 @@
     cursor: pointer;
 }
 
-/* Fullscreen image overlay */
+
 .fullscreen-overlay {
     display: flex;
     justify-content: center;
@@ -244,7 +243,7 @@
     transform: scale(1);
 }
 
-/* Style for the download button */
+
 .download-btn {
     display: block;
     margin-top: 20px; 
@@ -341,14 +340,14 @@
     }
 
     .custom-modal-content {
-        display: block; /* Stack images in a column */
+        display: block; 
     }
 
     .gallery-image {
-        width: 100%; /* Full width for single image per row */
-        max-width: none; /* Remove any max-width constraints */
-        margin-bottom: 10px; /* Space between images */
-        aspect-ratio: auto; /* Maintain aspect ratio */
+        width: 100%; 
+        max-width: none; 
+        margin-bottom: 10px; 
+        aspect-ratio: auto; 
     }
 
     .footer i {
@@ -380,15 +379,15 @@
 
     .custom-modal-content {
         display: flex;
-        flex-wrap: wrap; /* Wrap images to fit */
+        flex-wrap: wrap; 
         justify-content: center;
-        gap: 10px; /* Adjust gap between images */
+        gap: 10px; 
     }
 
     .gallery-image {
-        width: 45%; /* Adjust width for multiple images per row */
-        max-width: none; /* Remove any max-width constraints */
-        margin-bottom: 10px; /* Space between images */
+        width: 45%; 
+        max-width: none; 
+        margin-bottom: 10px; 
     }
 
 }
