--- a/css/memberscurrent.css
+++ b/css/memberscurrent.css
@@ -2,7 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;900&family=Poppins:wght@200;300;400;500;600;700&family=Vollkorn:wght@400;500;600;700;800;900&display=swap');
 
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
+}
 
 
 body {
